10/13/06 - Added "wear all"
10/13/06 - Fixed sacrafice so you can't sacrafice large objects.
10/13/06 - Added object specification for getItem in room.
10/13/06 - Decreased urge to wander.
10/13/06 - *Wrote gridding code.
Upgrade to version .88
10/14/06 - Implemented move points
10/14/06 - Fixed player attacking.
10/14/06 - Fixed coloring of food/drink.
Upgrade to version .89
11/28/06 - *Added container object.
11/28/06 - *Updated how instances of items are handled and stored.
11/28/06 - *Updated "get" command to be more intelligent.
11/28/06 - Fixed get 900000 gold bug.
11/28/06 - *Added corpse and disposable items.
Upgrade to version .90
11/29/06 - Fixed blocking duplicate login problem.
11/29/06 - Fixed mobile-finding not taking actor into account.
11/29/06 - Stopped people from upping players past 50.
11/29/06 - Added ability to sac corpses.
Upgrade to version .91
12/??/06 - Implemented smarter hit calculation and consider.
12/??/06 - Increased default move points.
12/??/06 - Prevented premature rounding in getAverage for rolls.
01/09/07 - Prevented gving items to self.
01/09/07 - Prevented negative gold.
01/09/07 - Revisions to get and put commands.
Upgrade to version .92
01/23/07 - Rewrote Item attributes and iset code.
01/23/07 - Rewrote fight code to allow multiple person fights
01/23/07 - Wrote Fight factory to centralize fight code.
01/23/07 - Updated ability code
01/23/07 - Added aggressive mobiles.
01/23/07 - Rewrote fight code to handle red v. blue style fighting
01/25/07 - Fixed non-authenticated logins booting real players.
Upgrade to version .93
02/04/07 - Fixed corpse gold-dropping issue.
02/07/07 - Created new configuration system
02/07/07 - Added positions and minPos.
02/07/07 - Added autoloot and autosac.
Upgrade to version .94
08/16/07 - Added slist and whois commands
08/16/07 - Begun creation of player states/positions.
Upgrade to version .95
08/16/07 - Fixed rolling issue with words like "medallion".